<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!-- 首页portal -->
    <item 
        android:id="@+id/main_page_item"
        android:icon="@drawable/m1"
        android:showAsAction="ifRoom|withText"
        android:title="@string/main_page"
        />
        
    <!-- 收藏夹favourite -->
    <item
        android:id="@+id/seach_item"
        android:icon="@drawable/f1"
        android:showAsAction="ifRoom|withText"
        android:title="@string/favourite"
        />
        
    <!-- 系统公告notice -->
    <item
        android:id="@+id/system_notice_item"
        android:icon="@drawable/n1"
        android:showAsAction="ifRoom|withText"
        android:title="@string/system_notice"
        />
        
    <!-- 帐号管理login -->
    <item
        android:id="@+id/account_manage_item"
        android:icon="@drawable/e1"
        android:showAsAction="ifRoom|withText"
        android:title="@string/account_manage"
        />
        
     <item
        android:id="@+id/setting_item"
        android:showAsAction="ifRoom|withText"
        android:title="@string/setting"
        />
  
</menu>
